<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightergrey"
    android:orientation="vertical" >
    
    <Button
        android:id="@+id/settings_clean_db"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:text="@string/str_layout_settings_btn01"
        />
    
    <Button
        android:id="@+id/settings_manual"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:text="@string/str_layout_settings_btn02"
        />
    
    <Button
        android:id="@+id/settings_check_ver"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:text="@string/str_layout_settings_btn03"
        />
    
    <Button
        android:id="@+id/settings_outer_ping_set"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:text="@string/str_layout_settings_btn04"
        />
    
<!--     <Button
        android:id="@+id/settings_tsukkomi"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:src="@color/white"
        android:background="@color/white"
        android:text="@string/str_layout_settings_btn05"
        /> -->

</LinearLayout>
