<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.attsinghua.dwf.ViewActivityPPCounter" >

    <TextView
        android:id="@+id/ppcounter_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="66sp"
        android:layout_marginTop="28dp"
        android:text="@string/str_layout_ppcounter_textView1" />

    <Button
        android:id="@+id/ppcounter_btn_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ppcounter_textView1"
        android:layout_below="@+id/ppcounter_textView1"
        android:layout_marginRight="42dp"
        android:layout_marginTop="54dp"
        android:text="@string/str_layout_ppcounter_btn_display" />

    <Button
        android:id="@+id/ppcounter_btn_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ppcounter_btn_display"
        android:layout_alignBottom="@+id/ppcounter_btn_display"
        android:layout_alignLeft="@+id/ppcounter_textView1"
        android:layout_marginLeft="45dp"
        android:text="@string/str_layout_ppcounter_btn_reset" />

</RelativeLayout>
