<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightergrey">
    
    <LinearLayout
        android:id="@+id/instant_layout_rst_pic"
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/instant_rst_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitStart"
            android:background="@drawable/instant_check_welcome"/>
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/instantcheck_Logs"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="0dp"
        android:background="@color/lightergrey"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/str_layout_default_null"
        android:textColor="@color/lightgrey" />
    
     <!-- <ProgressBar
        android:id="@+id/instantcheck_progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:layout_above="@id/instantcheck_Logs"
        android:layout_margin="0dp"
        android:padding="0dp"
        android:animationResolution="2"
        android:layerType="none"
        android:outlineProvider="none"
        android:layout_alignParentLeft="true" /> -->

    <TextView
        android:id="@+id/instantcheck_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/str_layout_inscheck_tv01"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />
    
    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/instantcheck_tip"
        android:layout_above="@+id/relativeLayout4"
        android:layout_marginBottom="8dp" >
    <TextView
        android:id="@+id/instantcheck_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="13dp"
        android:text="@string/str_layout_inscheck_tv02"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="13sp"/>
    </RelativeLayout>
    
    
    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/instantcheck_Logs"
        android:layout_marginBottom="8dp" >

        <Button
            android:id="@+id/instantcheck_btn"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_alignParentLeft="true"
            android:background="@drawable/instant_check_btn_start"
            android:textSize="12sp"
            android:textColor="@color/lightgrey"
            android:text="@string/str_layout_inscheck_btn01" />

        <Button
            android:id="@+id/instantcheck_stop"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_toRightOf="@id/instantcheck_btn"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="2dp"
            android:background="@drawable/instant_check_btn_cancel"
            android:textSize="12sp"
            android:textColor="@color/lightgrey"
            android:text="@string/str_layout_inscheck_btn02" />
    </RelativeLayout>

</RelativeLayout>